--- a/googleform/googleform.css
+++ b/googleform/googleform.css
@@ -17,14 +17,17 @@ h2 {
     font-weight:600;
 }
 
+.wrapper {
+    width:750px;
+    margin: 0 auto;
+}
 .header {
-    height: 90px;
+    height: 150px;
     border-top:7px solid purple;
     padding-left:20px;
     padding-top:10px;
     background-color: white;
     margin:10px auto;
-    width: 80%;
     border: 1px solid lavender;
     border-radius: 10px;    
     border-top:7px solid purple;
@@ -32,17 +35,18 @@ h2 {
 
 .header h1 {
     font-weight: bold;
-    font-size:20px;   
+    font-size:30px;   
 }
 
 .header p{
-    padding-top:10px;
+    padding-top:5px;
+    padding-bottom:20px;
     font-size:15px;
-    font-weight:normal;
+    font-weight:600;
+    border-bottom: 1px solid lightgray ;
 }
 
 .sec {
-    width: 81.5%;
     margin:10px auto;   
     border: 1px solid lavender;
     border-radius: 10px; 
@@ -138,7 +142,6 @@ input[type="text" i] {
 }
 
 .btn {
-    margin-left:170px;
     margin-bottom: 20px;
     background-color: rgb(101, 36, 161);
     border: 1px solid rgb(101, 36, 161);
@@ -147,4 +150,11 @@ input[type="text" i] {
     width: 90px;
     height:50px;
     font-size: 15px;
+}
+
+.delete {
+    border:none;
+    background-color: lavender;
+    color:rgb(101, 36, 161);
+    float:right;
 }
