파일명 변경 & 코드 수정

--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,500&display=swap');
+@import url("https://g-grafolio.pstatic.net/20190906_124/1567765957310rtpwx_JPEG/%B0%A1%C0%BB4.jpg");
 
 * {
     font-family: 'Roboto', sans-serif;
