--- a/기초구현실습_로그인화면/styles.css
+++ b/기초구현실습_로그인화면/styles.css
@@ -22,7 +22,7 @@ a {
     width: 350px;
     height: 140px;
     border:1px solid #DBDBDB;
-    margin:0px auto;
+    margin:20% auto;
     border-radius: 5px;
 }
 
@@ -66,4 +66,39 @@ a {
     left:176px;
     padding-top:3px;
     margin-left:7px;
+}
+
+.check ,.join {
+    display:inline-block;
+    color:#767676;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0em;
+}
+
+.info-text {
+    font-size:12px;
+    font-weight: 400;
+    /* text-align: left; */
+    color: #282828;
+    float: left;
+}
+
+.join-text {
+    font-size: 12px;
+    font-weight: 400;
+    padding-left:10px;
+    float: right;
+    /* float는 둥둥떠다니다: 왼쪽과 오른쪽으로 떠다닌다는 소리 
+    float 는 둥둥 떠다니기 때문에 다른 요소와 겹칠 수 o 다른 요소와 신경을 안씀 가두리를 만들어줘야함*/
+}
+
+.float-wrap {
+    overflow: hidden;
+    color:#767676;
+    margin-top: 18px;
+    margin-left:36px;
+    margin-right: 16px;
+    /* float 요소들 다 묶어주고  그 다음에 오는 html 요소가 float에 영향 받지 않도록 해줌 */
 }
