--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -133,3 +133,22 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+.txt-hide {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+}
+
+img {
+    width: 100%;
+    vertical-align: top;
+}
