--- a/practice_login_basic/login_style.css
+++ b/practice_login_basic/login_style.css
@@ -34,7 +34,9 @@ a {
 }
 
 .header-login {
+    text-align: center;
     border-bottom: 1px solid #C4C4C4;
+    padding:22px 24px 18px 24px;
 }
 
 
@@ -45,16 +47,13 @@ a {
     font-weight: 500;
     line-height: 20px;
     letter-spacing: 0em;
-    margin-left:187px;
-    padding:20px 0px 17px;
+    vertical-align: top;
 }
 
 .login-close {
     float:right;
     width:16px;
     height: 16px;
-    margin-right:23px;
-    margin-top:21px;
 }
 .main-login {
     padding:26px 24px 24px;
@@ -80,7 +79,8 @@ a {
     border:1px solid #C4C4C4;
     border-radius: 5px;
     background-color: white;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding:14px 15px;
     color: #767676;
     margin-bottom: 10px;
@@ -90,7 +90,8 @@ a {
     border:1px solid #C4C4C4;
     border-radius: 5px;
     background-color: white;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding:14px 15px;
     color: #767676;
     margin-bottom: 16px;
@@ -166,6 +167,9 @@ a {
 }
 
 .or-login {
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
     text-align:center;
     font-family: Spoqa Han Sans Neo;
     font-size: 14px;
@@ -174,8 +178,20 @@ a {
     letter-spacing: 0em;
     color: #767676;
     margin-bottom:19px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap:10px;
 }
 
+.or-login::before, .or-login::after {
+    content: " ";
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    height: 1px;
+    background-color: #c4c4c4;
+}
 .google {
     border: 1px solid #767676;
     border-radius: 5px;
@@ -201,7 +217,6 @@ a {
     border: 1px solid #F2C94C;
     border-radius: 5px;
     padding:10px 0px 10px 11px;
-    margin-bottom: 10px;
 }
 
 .img-google,.img-facebook,.img-naver,.img-kakao {
