--- a/Dropdown-selectbox/CSS/style.css
+++ b/Dropdown-selectbox/CSS/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@700;800&family=Roboto&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@700;800&family=Roboto&display=swap');
 
 * {
     font-family: 'Gothic A1', sans-serif;
@@ -23,7 +23,6 @@
     background-color: #FFF;
     padding:12px 12px 12px 13px;
     text-align: start;
-    /* background:url("../image/direction.png") no-repeat 95% 50%/15px auto; */
     background-image: url("../image/direction.png");
     background-repeat: no-repeat;
     background-position: 174px center;
@@ -75,4 +74,94 @@
 #language-btn:checked ~ .language-list {
     display: block;
 }
+ */
 
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@700;800&family=Roboto&display=swap');
+
+* {
+    font-family: 'Gothic A1', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+body,ul {
+    padding:0;
+    margin:0;
+}
+
+h1,h2 {
+    padding:0;
+    margin:0;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+ul {
+    list-style:none;
+}
+
+.txt-hide {
+    position:absolute;
+    width:1;
+    height:1;
+    clip: rect(0,0,0,0);
+    overflow: hidden;
+}
+
+.wrapper {
+    width:200px;
+    margin: 100px auto 0;
+}
+
+.btn-select {
+    width: 100%;
+    padding: 12px 13px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border:1px solid #C4C4C4;
+    border-radius: 10px;
+    background-color:#FFF;
+    text-align: left;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0em;
+    background: url('../image/direction.png') no-repeat right 13px center;
+	cursor: url("https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcIwR9P%2FbtraRjIi6El%2FofkcHd4wk3BWMKZorWGH0k%2Fimg.png"), auto;
+}
+
+.btn-select:hover {
+    border-color:#9B51E0;
+    outline:3px solid #F8E4FF;
+}
+
+.list-lang {
+    display:none;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid #C4C4C4;
+    border-radius: 10px;
+    margin-top:9px;
+    padding:4px 7px;
+}
+
+.list-lang li button{
+    width:100%;
+    display:block;
+    border:none;
+    border-radius: 8px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding:6px 9px;
+    background-color: #FFF;
+	cursor: url("https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcIwR9P%2FbtraRjIi6El%2FofkcHd4wk3BWMKZorWGH0k%2Fimg.png"), auto;
+}
+
+.list-lang li button:hover {
+    background-color: #F8E4FF;
+}
